chore: add icon github

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "ui-clone-github",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/github.svg",
     "scheme": "uiclonegithub",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -32,12 +32,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/github.svg",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#ffffff"
           }
         }
       ]
